form fixed, white space fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,8 +128,11 @@ h4 {
     text-align: center;
     letter-spacing: 5px;
     padding-bottom: 20px;
-    font-size: -webkit-xxx-large;
+    font-size: 40px;
     padding-top: 30px;
+    padding-right: 0px;
+    margin-right: 0px;
+    margin: 0 0 0 0;
 }
 
 .container-bio h3 {
@@ -217,7 +220,7 @@ h1 {
     -webkit-transition: border .2s ease-in-out;
     -o-transition: border .2s ease-in-out;
     transition: border .2s ease-in-out;
-    
+
 }
 
 .image-thumbnail {
@@ -302,8 +305,6 @@ h1 {
     background-size: cover;
     z-index: 1000;
     padding-bottom: 30px;
-
-
 }
 
 .audio-bg-color {
@@ -439,7 +440,7 @@ video {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 25px;
+    font-size: 30px;
 }
 
 @media(min-width:400px) {
